# rust-axum-htmx-tailwind

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
src/: main.rs
templates/: base.html
templates/foo/: index.html
templates/root/: index.html
templates/search-results/: index.html
ui/: app.js
ui/templates/: base.html
ui/templates/other-route/: index.html
ui/templates/root/: index.html
ui/templates/search-results/: index.html
