[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
lazy_static = "1.4.0"
serde_json = "1.0.105"
tera = "1.19.1"
tokio = { version = "1.0", features = ["full"] }
tower-livereload = "0.8.1"
